--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\MBConsoleLogger\packages.config" />
+  <repository path="..\src\MBConsoleLogger\packages.config" />
 </repositories>
