--- a/src/MBConsoleLogger/App.config
+++ b/src/MBConsoleLogger/App.config
@@ -19,7 +19,7 @@
       </mapping>
       <mapping>
         <level value="DEBUG" />
-        <foreColor value="Blue" />
+        <foreColor value="Blue, HighIntensity" />
       </mapping>
       <mapping>
         <level value="WARN" />
@@ -27,7 +27,7 @@
       </mapping>
       <mapping>
         <level value="ERROR" />
-        <foreColor value="Red" />
+        <foreColor value="Red, HighIntensity" />
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%message%newline" />
